简单异步例子

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>index</title>
-    <script src="./Observable/syncSimpleObservable.js"></script>
+    <!-- <script src="./Observable/syncSimpleObservable.js"></script> -->
+    <script src="./Observable/asyncSimpleObservable.js"></script>
   </head>
 
   <body>
