--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>index</title>
     <!-- <script src="./Observable/syncSimpleObservable.js"></script> -->
-    <script src="./Observable/asyncSimpleObservable.js"></script>
+    <!-- <script src="./Observable/asyncSimpleObservable.js"></script> -->
+    <script src="./Observable/SafeObserver.js"></script>
   </head>
 
   <body>
