--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <script src="./Observable/syncSimpleObservable.js"></script> -->
     <!-- <script src="./Observable/asyncSimpleObservable.js"></script> -->
     <script src="./Observable/SafeObserver.js"></script>
+    <!-- <script src="./Observable/ObservableClass.js"></script> -->
   </head>
 
   <body>
