增加subject的支持

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>index</title>
+    <!-- observable -->
     <!-- <script src="./Observable/syncSimpleObservable.js"></script> -->
     <!-- <script src="./Observable/asyncSimpleObservable.js"></script> -->
-    <script src="./Observable/SafeObserver.js"></script>
+    <!-- <script src="./Observable/SafeObserver.js"></script> -->
     <!-- <script src="./Observable/ObservableClass.js"></script> -->
+    <!-- subject -->
+    <script src="./Subject/proxy.js"></script>
   </head>
 
   <body>
