--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./Observable/SafeObserver.js"></script> -->
     <!-- <script src="./Observable/ObservableClass.js"></script> -->
     <!-- subject -->
+    <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
     <script src="./Subject/proxy.js"></script>
   </head>
 
