--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- <script src="./Observable/ObservableClass.js"></script> -->
     <!-- subject -->
     <script src="./rxjs.umd.min.js"></script>
-    <script src="./Subject/proxy.js"></script>
+    <!-- <script src="./Subject/proxy.js"></script> -->
+    <!-- promise -->
+    <script src="./Observable/promise-async.js"></script>
   </head>
 
   <body>
