--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>index</title>
+    <script src="./rxjs.umd.min.js"></script>
     <!-- observable -->
     <!-- <script src="./Observable/syncSimpleObservable.js"></script> -->
     <!-- <script src="./Observable/asyncSimpleObservable.js"></script> -->
     <!-- <script src="./Observable/SafeObserver.js"></script> -->
     <!-- <script src="./Observable/ObservableClass.js"></script> -->
     <!-- subject -->
-    <script src="./rxjs.umd.min.js"></script>
     <!-- <script src="./Subject/proxy.js"></script> -->
     <!-- promise -->
-    <script src="./Observable/promise-async.js"></script>
+    <!-- <script src="./Observable/promise-async.js"></script> -->
+    <!-- operator -->
+
   </head>
 
   <body>
