--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- promise -->
     <!-- <script src="./Observable/promise-async.js"></script> -->
     <!-- operator -->
-
+    <script src="./Operator/publish.js"></script>
   </head>
 
   <body>
